--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -34,7 +34,7 @@
             android:layout_height="fill_parent"
             android:lineSpacingExtra="5dp"
             android:padding="10dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/reader_text_size"
             android:visibility="invisible" />
 
         <com.qiwenge.android.reader.ReadPagerView
@@ -43,7 +43,7 @@
             android:layout_height="fill_parent"
             android:lineSpacingExtra="5dp"
             android:padding="10dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/reader_text_size"
             android:visibility="invisible" />
 
         <com.qiwenge.android.reader.ReadPagerView
@@ -52,7 +52,7 @@
             android:layout_height="fill_parent"
             android:lineSpacingExtra="5dp"
             android:padding="10dp"
-            android:textSize="20sp"
+            android:textSize="@dimen/reader_text_size"
             android:visibility="invisible" />
     </RelativeLayout>
 
