--- a/app/src/main/res/layout/item_reader.xml
+++ b/app/src/main/res/layout/item_reader.xml
@@ -4,4 +4,4 @@
     android:layout_height="match_parent"
     android:lineSpacingExtra="5dp"
     android:padding="10dp"
-    android:textSize="20sp" />
+    android:textSize="@dimen/reader_text_size" />
