--- a/app/src/main/res/layout/item_about_recommend.xml
+++ b/app/src/main/res/layout/item_about_recommend.xml
@@ -16,7 +16,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -28,6 +28,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="老五"
+            android:textSize="@dimen/font_size_small"
             android:textColor="@color/tv_title_color" />
 
         <TextView
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:maxLines="2"
+            android:textSize="@dimen/font_size_12"
             android:text="老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五"
             android:textColor="@color/tv_desc_color" />
     </LinearLayout>
