Modified and added resource files.

--- a/app/src/main/res/drawable/btn_hollow_yellow_n.xml
+++ b/app/src/main/res/drawable/btn_hollow_yellow_n.xml
@@ -4,7 +4,7 @@
 
     <corners android:radius="0dp" />
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@android:color/transparent" />
 
     <size
         android:height="10dp"
