--- a/app/src/main/res/layout/activity_book_intro.xml
+++ b/app/src/main/res/layout/activity_book_intro.xml
@@ -1,5 +1,4 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,11 +12,12 @@
         android:padding="10dp" >
 
         <LinearLayout
+            android:id="@+id/layout_intro_top"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:orientation="horizontal"
-            android:padding="15dp" >
+            android:padding="15dp">
 
             <ImageView
                 android:id="@+id/iv_cover"
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:textColor="@color/tv_title_color"
+                    android:textColor="@color/main_dress_color"
                     android:textSize="@dimen/font_size_middle" />
 
                 <TextView
@@ -82,7 +82,8 @@
             android:orientation="horizontal"
             android:paddingBottom="15dp"
             android:paddingLeft="15dp"
-            android:paddingRight="15dp" >
+            android:paddingRight="15dp"
+            android:id="@+id/layout_intro_buttons">
 
             <Button
                 android:id="@+id/btn_chapter"
@@ -108,11 +109,13 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv_shadow1"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@color/main_shadow_color" />
 
         <LinearLayout
+            android:id="@+id/layout_intro_center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -142,6 +145,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv_shadow2"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@color/main_shadow_color" />
@@ -161,7 +165,7 @@
                 android:paddingTop="15dp"
                 android:text="@string/book_intro_related"
                 android:textColor="@color/tv_title_color"
-                android:textSize="@dimen/font_size_middle" />
+                android:textSize="@dimen/font_size_middle"  />
 
             <ListView
                 android:id="@+id/gv_recommend"
@@ -173,6 +177,7 @@
             </ListView>
 
             <ImageView
+                android:id="@+id/iv_shadow3"
                 android:layout_width="fill_parent"
                 android:layout_height="1dp"
                 android:background="@color/main_shadow_color" />
