--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_main_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/main_bg_color"
@@ -8,7 +8,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_bg_color"
         android:orientation="vertical" >
 
         <RelativeLayout
@@ -31,6 +30,7 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/layout_main_menu"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@android:color/white"
