--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -1,13 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <FrameLayout
         android:id="@+id/layout_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </FrameLayout>
+        android:layout_height="match_parent"></FrameLayout>
 
     <LinearLayout
         android:id="@+id/layout_top"
@@ -16,17 +15,28 @@
         android:layout_marginTop="-48dp"
         android:background="@color/action_bar_bg_color"
         android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
-        <ImageView
+        <LinearLayout
+            android:id="@+id/layout_back"
+            android:background="@drawable/item_common_bg"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/icon_action_back" />
+            android:layout_height="fill_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingRight="5dp">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_launcher" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/icon_action_back" />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ic_launcher" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_book_title"
@@ -35,7 +45,6 @@
             android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="center_vertical"
-            android:paddingLeft="5dp"
             android:paddingRight="15dp"
             android:singleLine="true"
             android:textColor="@color/action_bar_text_color"
