--- a/app/src/main/res/layout/fragment_book_city.xml
+++ b/app/src/main/res/layout/fragment_book_city.xml
@@ -2,17 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/layout_tab"
         android:layout_width="fill_parent"
-        android:layout_height="40dp" >
+        android:layout_height="40dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="40dp"
-            android:background="@android:color/white"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_recommend"
@@ -49,10 +49,11 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv_line"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:layout_alignParentBottom="true"
-            android:background="@drawable/divider_bg" />
+            android:background="@color/main_shadow_color" />
 
         <com.viewpagerindicator.UnderlinePageIndicator
             android:id="@+id/indicator"
@@ -64,7 +65,6 @@
     <com.qiwenge.android.ui.SlowViewPager
         android:id="@+id/viewpager_book_city"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-    </com.qiwenge.android.ui.SlowViewPager>
+        android:layout_height="fill_parent"></com.qiwenge.android.ui.SlowViewPager>
 
 </LinearLayout>
