--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -1,61 +1,67 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout_container"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp"
-        android:singleLine="true"
-        android:textSize="@dimen/font_size_big" />
+    <LinearLayout
+        android:id="@+id/layout_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
-
-        <com.qiwenge.android.ui.SlowViewPager
-            android:id="@+id/viewpager_reader"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-        </com.qiwenge.android.ui.SlowViewPager>
-
-        <com.qiwenge.android.reader.ReadPagerView
-            android:id="@+id/reader_current"
+        <TextView
+            android:id="@+id/tv_title"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:lineSpacingExtra="5dp"
-            android:padding="10dp"
-            android:textSize="@dimen/reader_text_size"
-            android:visibility="invisible" />
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            android:singleLine="true"
+            android:textSize="@dimen/font_size_big" />
 
-        <com.qiwenge.android.reader.ReadPagerView
-            android:id="@+id/reader_next"
+        <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:lineSpacingExtra="5dp"
-            android:padding="10dp"
-            android:textSize="@dimen/reader_text_size"
-            android:visibility="invisible" />
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-        <com.qiwenge.android.reader.ReadPagerView
-            android:id="@+id/reader_prev"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:lineSpacingExtra="5dp"
-            android:padding="10dp"
-            android:textSize="@dimen/reader_text_size"
-            android:visibility="invisible" />
-    </RelativeLayout>
+            <com.qiwenge.android.ui.SlowViewPager
+                android:id="@+id/viewpager_reader"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></com.qiwenge.android.ui.SlowViewPager>
 
-    <include layout="@layout/layout_read_page_bottom" />
+            <com.qiwenge.android.reader.ReadPagerView
+                android:id="@+id/reader_current"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:lineSpacingExtra="5dp"
+                android:padding="10dp"
+                android:textSize="@dimen/reader_text_size"
+                android:visibility="invisible" />
 
-</LinearLayout>
+            <com.qiwenge.android.reader.ReadPagerView
+                android:id="@+id/reader_next"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:lineSpacingExtra="5dp"
+                android:padding="10dp"
+                android:textSize="@dimen/reader_text_size"
+                android:visibility="invisible" />
+
+            <com.qiwenge.android.reader.ReadPagerView
+                android:id="@+id/reader_prev"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:lineSpacingExtra="5dp"
+                android:padding="10dp"
+                android:textSize="@dimen/reader_text_size"
+                android:visibility="invisible" />
+        </RelativeLayout>
+
+        <include layout="@layout/layout_read_page_bottom" />
+
+    </LinearLayout>
+
+    <include layout="@layout/layout_loading" />
+
+</RelativeLayout>
