--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -14,7 +14,7 @@
         android:gravity="center_vertical"
         android:paddingLeft="10dp"
         android:text="@string/app_name"
-        android:textColor="@color/tv_title_color"
+        android:textColor="@color/tv_desc_color"
         android:textSize="@dimen/font_size_middle" />
 
 </LinearLayout>
