--- a/app/src/main/res/layout/item_chapter.xml
+++ b/app/src/main/res/layout/item_chapter.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textColor="@color/tv_title_color"
+        android:textColor="@color/tv_desc_color"
         android:textSize="@dimen/font_size_middle" />
 
 </LinearLayout>
