--- a/app/src/main/res/layout/layout_pager_footer.xml
+++ b/app/src/main/res/layout/layout_pager_footer.xml
@@ -1,13 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:gravity="center"
     android:orientation="horizontal" >
 
     <ProgressBar
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        style="@style/LoadingDots"
         android:layout_marginRight="5dp" />
 
     <TextView
@@ -16,7 +16,7 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:text="正在加载..."
-        android:textColor="@color/tv_title_color"
+        android:textColor="@color/tv_desc_color"
         android:textSize="@dimen/font_size_middle" />
 
 </LinearLayout>
