--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <!-- ActionBar -->
     <color name="action_bar_bg_color">#303030</color>
-    <color name="action_bar_overlay_color">#000000</color>
+    <color name="action_bar_overlay_color">#505050</color>
     <color name="action_bar_text_color">#e6e6e6</color>
     <color name="action_bar_item_bg_color">#20000000</color>
 
@@ -11,10 +11,13 @@
     <color name="main_dress_color">#ee7a31</color>
     <color name="main_divder_color">#9d999b</color>
     <color name="main_bg_color">#ffffff</color>
+    <color name="main_night_bg_color">#404040</color>
+    <color name="main_night_second_bg_color">#505050</color>
     <color name="main_second_bg_color">#eeeeee</color>
     <color name="main_yellow_color">#fc9634</color>
     <color name="main_gray_color">#cccccc</color>
     <color name="main_shadow_color">#cccccc</color>
+    <color name="main_night_shadow_color">#303030</color>
 
     <!-- f0f0f0 -->
 
@@ -24,7 +27,7 @@
     <color name="common_line_color">@color/main_gray_color</color>
     <color name="lv_divider_color">#cdcdcd</color>
 
-    <!-- item -->
+    <!-- TextView -->
     <color name="tv_title_color">#303030</color>
     <color name="tv_desc_color">#939393</color>
 
