--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <!-- Default item padding in a ListView. -->
@@ -17,5 +18,8 @@
     <!-- Common Size -->
     <dimen name="set_item_height">70dp</dimen>
     <dimen name="reader_text_size">16sp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="default_line_space">10dp</dimen>
 
 </resources>
