--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:dropDownListViewStyle">@style/MyDropDownListView</item>
         <item name="android:selectableItemBackground">@drawable/action_bar_item_bg</item>
+        <item name="android:actionModeBackground">@color/action_bar_bg_color</item>
     </style>
 
     <style name="SplashTheme" parent="android:Theme">
@@ -120,6 +121,17 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/common_line_color</item>
         <item name="android:contentDescription">@string/str_empty</item>
+    </style>
+
+    <style name="LoadingDots">
+        <item name="android:indeterminateOnly">true</item>
+        <item name="android:indeterminateDuration">10</item>
+        <item name="android:indeterminateBehavior">cycle</item>
+        <item name="android:indeterminateDrawable">@drawable/progress_loading</item>
+        <item name="android:minWidth">35px</item>
+        <item name="android:maxWidth">35px</item>
+        <item name="android:minHeight">35px</item>
+        <item name="android:maxHeight">35px</item>
     </style>
 
     <!--
