--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_read_container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"></FrameLayout>
 
     <LinearLayout
-        android:id="@+id/layout_top"
+        android:id="@+id/layout_reader_top"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:layout_marginTop="-48dp"
