Select and set highlight the chapter title which has readed currently.

--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     android:background="@color/main_bg_color" >
 
-    <com.qiwenge.android.ui.ScrollPageListView
+    <ListView
         android:id="@+id/listview_common"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:listSelector="@drawable/item_common_bg" >
-    </com.qiwenge.android.ui.ScrollPageListView>
+    </ListView>
 
     <TextView
         android:id="@+id/tv_empty"
@@ -19,5 +19,7 @@
         android:text="@string/empty_chapter"
         android:textColor="@color/tv_desc_color"
         android:textSize="@dimen/font_size_middle" />
+
+    <include layout="@layout/layout_loading" />
 
 </RelativeLayout>
