Fixed seaching books.

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -45,7 +45,7 @@
             <ImageView style="@style/ImageDivider" />
         </LinearLayout>
 
-        <include layout="@layout/layout_listview" />
+        <include layout="@layout/layout_listview_with_page" />
     </LinearLayout>
 
     <include layout="@layout/layout_loading" />
