--- a/app/src/main/res/layout/layout_pager_footer.xml
+++ b/app/src/main/res/layout/layout_pager_footer.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal" >
 
     <ImageView
-        android:id="@+id/iv_loading"
+        android:id="@+id/iv_footer_loading"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:background="@drawable/icon_loading_dots"
