--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <item name="android:windowBackground">@color/main_bg_color</item>
         <item name="android:homeAsUpIndicator">@drawable/icon_action_back</item>
+        <item name="android:logo">@drawable/ic_action_logo</item>
         <item name="android:windowContentOverlay">@drawable/action_bar_overlay</item>
         <item name="android:actionBarStyle">@style/MyActionBar</item>
         <item name="android:dropDownListViewStyle">@style/MyDropDownListView</item>
@@ -12,6 +13,7 @@
         <item name="android:actionModeBackground">@color/action_bar_bg_color</item>
         <item name="android:actionModeStyle">@style/MyActionModeStyle</item>
         <item name="android:actionModeCloseDrawable">@drawable/ic_action_mode_cancel</item>
+        <!--<item name="android:actionModeCloseButtonStyle">@style/MyActionModeCloseButton</item>-->
     </style>
 
     <style name="SplashTheme" parent="android:Theme">
@@ -40,12 +42,17 @@
     <!-- Setup the style of the ActionMode here -->
     <style name="MyActionModeStyle">
         <item name="android:titleTextStyle">@style/MyActionModeTitle</item>
+        <item name="android:actionModeSplitBackground">@drawable/ic_launcher</item>
     </style>
 
     <!-- Setup the text style of the ActionMode here -->
     <style name="MyActionModeTitle">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="MyActionModeCloseButton">
+        <item name="android:actionBarItemBackground">@drawable/action_bar_item_bg</item>
     </style>
 
     <!-- SubMenu样式 -->
