Modified the background color of Battery ProgressBar.

--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -32,9 +32,9 @@
                 android:background="@drawable/icon_action_back" />
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:background="@drawable/ic_launcher" />
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/ic_action_logo" />
 
         </LinearLayout>
 
