--- a/app/src/main/res/layout/layout_read_page_bottom.xml
+++ b/app/src/main/res/layout/layout_read_page_bottom.xml
@@ -26,7 +26,7 @@
         android:background="@drawable/battery_bg9"
         android:max="100"
         android:progress="100"
-        android:progressDrawable="@drawable/seekbar_bg" />
+        android:progressDrawable="@drawable/seekbar_battery_bg" />
 
     <TextView
         android:id="@+id/tv_time"
