--- a/app/src/main/res/layout/activity_legal.xml
+++ b/app/src/main/res/layout/activity_legal.xml
@@ -1,7 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     android:id="@+id/scrollView_container"
     android:scrollbars="none">
 
@@ -11,6 +12,8 @@
 
         <TextView
             android:id="@+id/tv_legal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:lineSpacingExtra="@dimen/default_line_space"
