Enable hardware accelerated in global except the TextView of item_reader..

--- a/app/src/main/res/layout/item_reader.xml
+++ b/app/src/main/res/layout/item_reader.xml
@@ -5,4 +5,5 @@
     android:lineSpacingExtra="5dp"
     android:padding="10dp"
     android:textColor="@color/tv_title_color"
+    android:layerType="software"
     android:textSize="@dimen/reader_text_size" />
