--- a/app/src/main/res/layout/item_book_shelf.xml
+++ b/app/src/main/res/layout/item_book_shelf.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_layout_bookshelf"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
@@ -64,10 +65,10 @@
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
                 android:paddingTop="1dp"
-                android:visibility="gone"
                 android:text="更新"
                 android:textColor="@android:color/white"
-                android:textSize="10dp" />
+                android:textSize="10dp"
+                android:visibility="gone" />
 
         </LinearLayout>
 
