--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -19,12 +19,11 @@
 
         <LinearLayout
             android:id="@+id/layout_back"
-            android:background="@drawable/item_common_bg"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
+            android:background="@drawable/action_bar_item_bg"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingRight="5dp">
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -32,8 +31,9 @@
                 android:background="@drawable/icon_action_back" />
 
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="5dp"
                 android:background="@drawable/ic_action_logo" />
 
         </LinearLayout>
@@ -43,12 +43,28 @@
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
+            android:layout_alignRight="@+id/layout_back"
             android:ellipsize="end"
             android:gravity="center_vertical"
-            android:paddingRight="15dp"
             android:singleLine="true"
             android:textColor="@color/action_bar_text_color"
             android:textSize="18sp" />
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tv_add_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/action_bar_item_bg"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:singleLine="true"
+            android:text="收藏"
+            android:textColor="@color/action_bar_text_color"
+            android:textSize="18sp" />
+
     </LinearLayout>
 
     <include layout="@layout/layout_read_bottom" />
