--- a/app/src/main/res/layout/item_read_theme.xml
+++ b/app/src/main/res/layout/item_read_theme.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp" >
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp" >
 
     <ImageView
         android:id="@+id/item_iv_icon"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@android:color/darker_gray" />
+        android:background="@drawable/theme_border"  />
 
     <ImageView
         android:id="@+id/item_iv_selected"
