--- a/app/src/main/res/layout/layout_read_bottom.xml
+++ b/app/src/main/res/layout/layout_read_bottom.xml
@@ -5,28 +5,30 @@
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:background="@color/action_bar_bg_color"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/layout_menu_top"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="visible" >
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:padding="10dp" >
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
             <ImageView
                 android:id="@+id/iv_brightness_minus"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:scaleType="center"
-                android:src="@drawable/icon_brightness_minus"  />
+                android:src="@drawable/icon_brightness_minus" />
 
             <SeekBar
                 android:id="@+id/seekbar_screen_brightness"
@@ -54,7 +56,8 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:padding="10dp" >
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
             <TextView
                 android:id="@+id/tv_fontsize_minus"
@@ -96,17 +99,16 @@
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp"
             android:listSelector="@android:color/transparent"
             android:numColumns="4"
-            android:scrollbars="none" >
-        </GridView>
+            android:scrollbars="none"></GridView>
     </LinearLayout>
 
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:alpha="0.5"
-        android:background="@android:color/black" />
+        android:background="@color/action_bar_overlay_color" />
 
     <GridView
         android:id="@+id/gv_menu"
@@ -114,7 +116,6 @@
         android:layout_height="wrap_content"
         android:listSelector="@drawable/item_common_bg"
         android:numColumns="3"
-        android:scrollbars="none" >
-    </GridView>
+        android:scrollbars="none"></GridView>
 
 </LinearLayout>
