Added a picture named spash_bg.jpg for SplashActivity and set it at styles.xml.

--- a/app/src/main/res/layout/item_read_theme.xml
+++ b/app/src/main/res/layout/item_read_theme.xml
@@ -9,8 +9,7 @@
     <ImageView
         android:id="@+id/item_iv_icon"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/theme_border"  />
+        android:layout_height="45dp"  />
 
     <ImageView
         android:id="@+id/item_iv_selected"
