--- a/app/src/main/res/drawable/progress_loading.xml
+++ b/app/src/main/res/drawable/progress_loading.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/icon_loading_dots"
-    android:duration="400"
-    android:fromDegrees="0"
+    android:drawable="@drawable/icon_loading_circle"
     android:pivotX="50%"
-    android:pivotY="50%"
-    android:toDegrees="-360" />
+    android:pivotY="50%" />
