--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/iv_loading"
+<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pb_loading"
     android:layout_width="45dp"
     android:layout_height="45dp"
-    android:layout_centerInParent="true"
-    android:background="@drawable/icon_loading_circle" />
+    android:layout_centerInParent="true" />
 
