--- a/app/src/main/res/layout/layout_pager_footer.xml
+++ b/app/src/main/res/layout/layout_pager_footer.xml
@@ -4,11 +4,19 @@
     android:gravity="center"
     android:orientation="horizontal" >
 
+
+
     <ImageView
         android:id="@+id/iv_footer_loading"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:background="@drawable/icon_loading_circle"
+        android:layout_marginRight="5dp" android:visibility="gone"/>
+
+
+    <ProgressBar
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginRight="5dp" />
 
     <TextView
