--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -14,8 +14,8 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:paddingTop="10dp"
             android:singleLine="true"
             android:textColor="@color/tv_title_color"
@@ -29,34 +29,28 @@
             <com.qiwenge.android.ui.SlowViewPager
                 android:id="@+id/viewpager_reader"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></com.qiwenge.android.ui.SlowViewPager>
+                android:layout_height="match_parent"/>
 
             <com.qiwenge.android.reader.ReadPagerView
                 android:id="@+id/reader_current"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:lineSpacingExtra="5dp"
-                android:padding="10dp"
-                android:textSize="@dimen/reader_text_size"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                style="@style/ReaderText"/>
 
             <com.qiwenge.android.reader.ReadPagerView
                 android:id="@+id/reader_next"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:lineSpacingExtra="5dp"
-                android:padding="10dp"
-                android:textSize="@dimen/reader_text_size"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                style="@style/ReaderText"/>
 
             <com.qiwenge.android.reader.ReadPagerView
                 android:id="@+id/reader_prev"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:lineSpacingExtra="5dp"
-                android:padding="10dp"
-                android:textSize="@dimen/reader_text_size"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                style="@style/ReaderText"/>
         </RelativeLayout>
 
         <include layout="@layout/layout_read_page_bottom" />
