--- a/app/src/main/res/layout/item_reader.xml
+++ b/app/src/main/res/layout/item_reader.xml
@@ -2,8 +2,6 @@
     android:id="@+id/tv_reader"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:lineSpacingExtra="5dp"
-    android:padding="10dp"
     android:textColor="@color/tv_title_color"
     android:layerType="software"
-    android:textSize="@dimen/reader_text_size" />
+    style="@style/ReaderText"  />
