--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,8 +42,8 @@
     <color name="read_night_text_color">#474545</color>
 
     <!-- ReadTheme -->
-    <color name="read_theme_white">@color/main_bg_color</color>
-    <color name="read_theme_green">#c5e7cb</color>
+    <color name="read_theme_white">#ffffff</color>
+    <color name="read_theme_green">#bed0bf</color>
     <color name="read_theme_yellow">#e6dbbf</color>
 
 </resources>
