--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
@@ -13,8 +12,9 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="@string/app_name"
-        android:textColor="@color/tv_desc_color"
+        android:textColor="@color/tv_title_color"
         android:textSize="@dimen/font_size_middle" />
 
 </LinearLayout>
