--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,6 @@
     <color name="main_shadow_color">#cccccc</color>
     <color name="main_night_shadow_color">#303030</color>
 
-
     <!-- Common -->
     <color name="item_selected_bg_color">#20000000</color>
     <color name="item_focus_bg_color">#10000000</color>
@@ -28,6 +27,7 @@
 
     <!-- TextView -->
     <color name="tv_title_color">#4d4d4d</color>
+    <color name="tv_title_night_color">#808080</color>
     <color name="tv_desc_color">#838383</color>
 
     <!-- Reader -->
