Updated . Fixed a lot of details.

--- a/app/src/main/res/layout/activity_book_intro.xml
+++ b/app/src/main/res/layout/activity_book_intro.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp" >
+        android:padding="@dimen/default_padding" >
 
         <LinearLayout
             android:id="@+id/layout_intro_top"
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:orientation="horizontal"
-            android:padding="15dp">
+            android:padding="@dimen/default_padding">
 
             <ImageView
                 android:id="@+id/iv_cover"
@@ -32,7 +32,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:orientation="vertical"
-                android:paddingLeft="10dp" >
+                android:paddingRight="@dimen/default_padding"
+                android:paddingLeft="@dimen/default_padding" >
 
                 <TextView
                     android:id="@+id/tv_title"
@@ -80,16 +81,16 @@
             android:layout_height="55dp"
             android:background="@android:color/white"
             android:orientation="horizontal"
-            android:paddingBottom="15dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
+            android:paddingBottom="@dimen/default_padding"
+            android:paddingLeft="@dimen/default_padding"
+            android:paddingRight="@dimen/default_padding"
             android:id="@+id/layout_intro_buttons">
 
             <Button
                 android:id="@+id/btn_chapter"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_marginRight="5dp"
+                android:layout_marginRight="6dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_hollow_yellow"
                 android:text="@string/book_intro_chapters"
@@ -100,7 +101,7 @@
                 android:id="@+id/btn_add"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="6dp"
                 android:layout_weight="1"
                 android:background="@drawable/btn_hollow_yellow"
                 android:text="@string/book_intro_add"
@@ -118,17 +119,15 @@
             android:id="@+id/layout_intro_center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/default_padding"
             android:background="@android:color/white"
             android:orientation="vertical"
-            android:paddingBottom="10dp" >
+            android:paddingBottom="@dimen/default_padding" >
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="15dp"
+                android:padding="@dimen/default_padding"
                 android:textColor="@color/tv_title_color"
                 android:text="@string/str_intro"
                 android:textSize="@dimen/font_size_middle" />
@@ -137,9 +136,9 @@
                 android:id="@+id/tv_intro"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:lineSpacingExtra="5dp"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
+                android:lineSpacingExtra="8dp"
+                android:paddingLeft="@dimen/default_padding"
+                android:paddingRight="@dimen/default_padding"
                 android:text="@string/str_intro"
                 android:textColor="@color/tv_desc_color"
                 android:textSize="@dimen/font_size_small" />
@@ -155,15 +154,16 @@
             android:id="@+id/layout_related"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/default_padding"
             android:background="@android:color/white"
             android:orientation="vertical" >
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="15dp"
-                android:paddingTop="15dp"
+                android:paddingRight="@dimen/default_padding"
+                android:paddingLeft="@dimen/default_padding"
+                android:paddingTop="@dimen/default_padding"
                 android:text="@string/book_intro_related"
                 android:textColor="@color/tv_title_color"
                 android:textSize="@dimen/font_size_middle"  />
