--- a/app/src/main/res/layout/item_about_recommend.xml
+++ b/app/src/main/res/layout/item_about_recommend.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="15dp" >
+    android:gravity="center_vertical"
+    android:padding="@dimen/default_item_padding" >
 
     <ImageView
         android:id="@+id/item_iv_cover"
-        android:layout_width="45dp"
+        android:layout_width="48dp"
         android:layout_height="60dp"
         android:background="@drawable/cover_border"
         android:contentDescription="@string/str_empty"
@@ -18,16 +19,15 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="4dp" >
+        android:paddingLeft="@dimen/default_item_padding"
+        android:paddingRight="@dimen/default_item_padding">
 
         <TextView
             android:id="@+id/item_tv_title"
             style="@style/ItemTitle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="老五"
+            android:text="@string/app_name"
             android:textSize="@dimen/font_size_small"
             android:textColor="@color/tv_title_color" />
 
@@ -36,10 +36,10 @@
             style="@style/ItemSummary"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="@dimen/item_text_margin"
             android:maxLines="2"
             android:textSize="@dimen/font_size_12"
-            android:text="老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五老五"
+            android:text="@string/app_name"
             android:textColor="@color/tv_desc_color" />
     </LinearLayout>
 
