--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -4,12 +4,12 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="10dp" >
+    android:padding="@dimen/default_item_padding" >
 
     <ImageView
         android:id="@+id/item_iv_cover"
-        android:layout_width="60dp"
-        android:layout_height="75dp"
+        android:layout_width="@dimen/item_cover_width"
+        android:layout_height="@dimen/item_cover_height"
         android:background="@drawable/cover_border"
         android:contentDescription="@string/str_empty"
         android:padding="1px"
@@ -19,9 +19,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="4dp" >
+        android:paddingLeft="@dimen/default_padding"
+        android:paddingRight="@dimen/default_padding">
 
         <TextView
             android:id="@+id/item_tv_title"
@@ -35,15 +34,17 @@
         <TextView
             android:id="@+id/item_tv_author"
             style="@style/ItemSummary"
+            android:layout_marginTop="@dimen/item_text_margin"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textSize="@dimen/font_size_12"
+            android:textSize="@dimen/font_size_small"
             android:textColor="@color/tv_desc_color" />
 
         <TextView
             android:id="@+id/item_tv_desc"
             style="@style/ItemSummary"
+            android:layout_marginTop="@dimen/item_text_margin"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLines="2"
