--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,10 @@
 <resources>
 
     <!-- Default item padding in a ListView. -->
+    <dimen name="default_padding">14dp</dimen>
+    <dimen name="default_item_padding">14dp</dimen>
     <dimen name="default_item_padding_vertical">10dp</dimen>
     <dimen name="default_item_padding_horizontal">16dp</dimen>
-    <dimen name="default_item_padding">10dp</dimen>
     <dimen name="default_item_padding_small">5dp</dimen>
     <dimen name="default_activity_padding">10dp</dimen>
 
@@ -22,5 +23,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="default_line_space">10dp</dimen>
+
+    <!-- Item -->
+    <dimen name="item_cover_height">78dp</dimen>
+    <dimen name="item_cover_width">64dp</dimen>
+    <dimen name="item_text_margin">2dp</dimen>
 
 </resources>
